<resources>
    <string name="app_name">S. R. Citas</string>
    <string name="label_login">Inicio de sesión</string>
    <string name="label_email">Correo</string>
    <string name="label_password">Clave</string>
    <string name="btn_login">Ingresar</string>
    <string name="label_go_to_register">¿Aun no te has registrado?</string>
    <string name="label_register">Registro</string>
    <string name="label_name">Nombre Completo</string>
    <string name="btn_register">Confirmar Registro</string>
    <string name="label_go_to_login">¿Ya tiene una cuenta?</string>

    <string name="please_fill_your_register_data">Por favor completa tus datos</string>
    <string name="btn_create_appointment">Reservar Cita</string>
    <string name="btn_my_appointments">Mis citas</string>
    <string name="btn_log_out">Cerrar Sesión</string>
    <string name="label_welcome">Bienvenido</string>
    <string name="label_create_appointment">Reservar cita</string>
    <string name="label_description">Descripcion</string>
    <string name="label_specialty">Especialidad</string>
    <string name="label_type">Tipo de Cita</string>
    <string name="type1">Consulta</string>
    <string name="type2">Exmen</string>
    <string name="type3">Operación</string>
    <string name="btn_next">Siguiente</string>
    <string name="label_doctor">Medico</string>
    <string name="label_scheduled_date">Fecha para la cita</string>
    <string name="btn_confir">Confirmar</string>

    <string name="date_format">%1$d-%2$s-%3$s</string>
    <string name="item_appointment_id">Cita medica #%1$d</string>
    <string name="item_appointment_date">Atención el dia %1$s</string>
    <string name="item_appointment_time">A las %1$s</string>
    <string name="label_my_appointments">Mis Citas Medicas</string>
    <string name="press_back_again">Preciones una vez más para salir</string>
    <string name="dialog_create_appointment_exist_title">¿Estas seguro que deseas salir?</string>
    <string name="dialog_create_appointment_exist_message">Si abandonas el registro, los datos que habias ingresado se perderan.</string>
    <string name="dialog_create_appointment_exist_positive_btn">Si, Salir</string>
    <string name="dialog_create_appointment_exist_negative_btn">Continuar registro</string>
    <string name="validate_appointment_description">La descripcion es demasiado corta</string>
    <string name="label_scheduled_time">Hora de la cita</string>
    <string name="label_confirm_appointment_data">Datos de la cita</string>
    <string name="validate_appointment_date">Es necesario seleccionar una fecha</string>
    <string name="validate_appointment_time">Es necesario definir una hora para la cita</string>

</resources>