<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CreateAppointmentActivity"

    android:id="@+id/cvStep2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:contentPadding="12dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    android:visibility="gone">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_doctor"
                android:layout_marginTop="8dp"/>

            <Spinner
                android:id="@+id/spinnerDoctors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_scheduled_date"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/etScheduledDate"
                android:onClick="onClickScheduledDate"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/radioGroupLeft"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="8:00 AM"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="8:00 AM"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/radioGroupRight"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="8:00 AM"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="8:00 AM"/>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnNext2"
                android:layout_width="match_parent"
                android:layout_marginTop="12dp"
                android:drawableEnd="@drawable/ic__navigate_next"
                style="@style/MenuButton"
                android:text="@string/btn_next"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.cardview.widget.CardView>